# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")

# --- Configuration Settings ---

config_setting(
    name = "debug_mode",
    values = {"compilation_mode": "dbg"},
)

config_setting(
    name = "fastbuild_mode",
    values = {"compilation_mode": "fastbuild"},
)

config_setting(
    name = "release_mode",
    values = {"compilation_mode": "opt"},
)

# --- Cargo Build (Debug) ---

genrule(
    name = "cargo_build_debug",
    srcs = glob([
        "src/**/*.rs",
        "Cargo.toml",
        "Cargo.lock",
        "build.rs",
    ]),
    outs = [
        "rust_lib_debug.a",
        "rust_bridge_h_debug.h",
        "src/lib.rs_debug.h",
        "cxxbridge/rust/cxx_debug.h",
    ],
    cmd = """
        set -e
        EXECROOT=$$(pwd)

        # Output locations
        OUTPUT_LIB=$(location rust_lib_debug.a)
        OUTPUT_H=$(location rust_bridge_h_debug.h)
        OUTPUT_SRC_H=$(location src/lib.rs_debug.h)
        OUTPUT_CXX_H=$(location cxxbridge/rust/cxx_debug.h)

        # 1. Resolve paths
        SANDBOX_CARGO=$(location Cargo.toml)
        REAL_CARGO=$$(readlink -f $$SANDBOX_CARGO 2>/dev/null || python3 -c "import os; print(os.path.realpath('$$SANDBOX_CARGO'))")
        CARGO_DIR=$$(dirname $$REAL_CARGO)
        WORKSPACE_ROOT=$$(cd $$CARGO_DIR/../.. && pwd)

        # 2. Force Cargo output to the workspace root target directory
        export CARGO_TARGET_DIR=$$WORKSPACE_ROOT/target

        # 3. Run Cargo
        cd $$WORKSPACE_ROOT
        echo "Building in $$WORKSPACE_ROOT with manifest $$CARGO_DIR/Cargo.toml"
        cargo build --manifest-path $$CARGO_DIR/Cargo.toml

        # 4. Locate Artifacts
        RUST_LIB=$$CARGO_TARGET_DIR/debug/libiggy_cpp.a

        if [ ! -f $$RUST_LIB ]; then
            echo "Error: Rust library not found at $$RUST_LIB" >&2
            echo "Check: Did you set crate-type = [\"staticlib\"] in Cargo.toml?" >&2
            exit 1
        fi

        # Headers: Locate them dynamically because cxx-build puts them in hashed directories
        BRIDGE_H_SRC=$$(find $$CARGO_TARGET_DIR/debug/build -name lib.rs.h -path "*iggy-cpp*" | head -n 1)
        CXX_H_SRC=$$(find $$CARGO_TARGET_DIR/debug/build -name cxx.h | head -n 1)

        if [ -z "$$BRIDGE_H_SRC" ]; then
             echo "Error: Generated lib.rs.h not found in $$CARGO_TARGET_DIR/debug/build" >&2
             exit 1
        fi

        if [ -z "$$CXX_H_SRC" ]; then
             echo "Error: Generated cxx.h not found in $$CARGO_TARGET_DIR/debug/build" >&2
             exit 1
        fi

        # 5. Copy Artifacts
        cd $$EXECROOT
        mkdir -p $$(dirname $$OUTPUT_SRC_H) $$(dirname $$OUTPUT_CXX_H)

        cp $$RUST_LIB $$OUTPUT_LIB
        cp $$BRIDGE_H_SRC $$OUTPUT_H
        cp $$BRIDGE_H_SRC $$OUTPUT_SRC_H
        cp $$CXX_H_SRC $$OUTPUT_CXX_H
    """,
    message = "Building Rust library (debug) with cargo...",
    local = 1,
)

# --- Cargo Build (Release) ---

genrule(
    name = "cargo_build_release",
    srcs = glob([
        "src/**/*.rs",
        "Cargo.toml",
        "Cargo.lock",
        "build.rs",
    ]),
    outs = [
        "rust_lib_release.a",
        "rust_bridge_h_release.h",
        "src/lib.rs_release.h",
        "cxxbridge/rust/cxx_release.h",
    ],
    cmd = """
        set -e
        EXECROOT=$$(pwd)
        OUTPUT_LIB=$(location rust_lib_release.a)
        OUTPUT_H=$(location rust_bridge_h_release.h)
        OUTPUT_SRC_H=$(location src/lib.rs_release.h)
        OUTPUT_CXX_H=$(location cxxbridge/rust/cxx_release.h)

        SANDBOX_CARGO=$(location Cargo.toml)
        REAL_CARGO=$$(readlink -f $$SANDBOX_CARGO 2>/dev/null || python3 -c "import os; print(os.path.realpath('$$SANDBOX_CARGO'))")
        CARGO_DIR=$$(dirname $$REAL_CARGO)
        WORKSPACE_ROOT=$$(cd $$CARGO_DIR/../.. && pwd)

        export CARGO_TARGET_DIR=$$WORKSPACE_ROOT/target

        cd $$WORKSPACE_ROOT
        cargo build --release --manifest-path $$CARGO_DIR/Cargo.toml

        RUST_LIB=$$CARGO_TARGET_DIR/release/libiggy_cpp.a

        if [ ! -f $$RUST_LIB ]; then
            echo "Error: Rust library not found at $$RUST_LIB" >&2
            exit 1
        fi

        BRIDGE_H_SRC=$$(find $$CARGO_TARGET_DIR/release/build -name lib.rs.h -path "*iggy-cpp*" | head -n 1)
        CXX_H_SRC=$$(find $$CARGO_TARGET_DIR/release/build -name cxx.h | head -n 1)

        cd $$EXECROOT
        mkdir -p $$(dirname $$OUTPUT_SRC_H) $$(dirname $$OUTPUT_CXX_H)

        cp $$RUST_LIB $$OUTPUT_LIB
        cp $$BRIDGE_H_SRC $$OUTPUT_H
        cp $$BRIDGE_H_SRC $$OUTPUT_SRC_H
        cp $$CXX_H_SRC $$OUTPUT_CXX_H
    """,
    message = "Building Rust library (release) with cargo...",
    local = 1,
)

# --- Unify Artifacts ---

filegroup(
    name = "lib_rs_h_selected",
    srcs = select({
        ":debug_mode": [":src/lib.rs_debug.h"],
        ":fastbuild_mode": [":src/lib.rs_debug.h"],
        ":release_mode": [":src/lib.rs_release.h"],
    }),
)

genrule(
    name = "lib_rs_h_unified",
    srcs = [":lib_rs_h_selected"],
    outs = ["src/lib.rs.h"],
    cmd = "cp $(location :lib_rs_h_selected) $(location src/lib.rs.h)",
)

filegroup(
    name = "rust_bridge_h_selected",
    srcs = select({
        ":debug_mode": [":rust_bridge_h_debug.h"],
        ":fastbuild_mode": [":rust_bridge_h_debug.h"],
        ":release_mode": [":rust_bridge_h_release.h"],
    }),
)

genrule(
    name = "rust_bridge_h_unified",
    srcs = [":rust_bridge_h_selected"],
    outs = ["rust_bridge_h.h"],
    cmd = "cp $(location :rust_bridge_h_selected) $(location rust_bridge_h.h)",
)

filegroup(
    name = "cxx_h_selected",
    srcs = select({
        ":debug_mode": [":cxxbridge/rust/cxx_debug.h"],
        ":fastbuild_mode": [":cxxbridge/rust/cxx_debug.h"],
        ":release_mode": [":cxxbridge/rust/cxx_release.h"],
    }),
)

genrule(
    name = "cxx_h_unified",
    srcs = [":cxx_h_selected"],
    outs = ["cxxbridge/rust/cxx.h"],
    cmd = "mkdir -p $$(dirname $(location cxxbridge/rust/cxx.h)) && cp $(location :cxx_h_selected) $(location cxxbridge/rust/cxx.h)",
)

# --- C++ Rules ---

cc_import(
    name = "rust_lib",
    static_library = select({
        ":debug_mode": ":rust_lib_debug.a",
        ":fastbuild_mode": ":rust_lib_debug.a",
        ":release_mode": ":rust_lib_release.a",
    }),
    alwayslink = True,
)

cc_library(
    name = "iggy-cpp",
    srcs = [],
    # Headers are now in hdrs to properly expose them to consumers
    hdrs = [
        "include/iggy.hpp",
        ":rust_bridge_h_unified",
        ":lib_rs_h_unified",
        ":cxx_h_unified",
    ],
    # INCLUDES FIX: Added "src" to allow #include "lib.rs.h" to work
    includes = [
        "cxxbridge",
        "include",
        "src",
    ],
    linkopts = [
        "-ldl",
        "-lpthread",
    ] + select({
        "@platforms//os:macos": [
            "-framework", "CoreFoundation",
            "-framework", "Security",
        ],
        "//conditions:default": [],
    }),
    deps = [
        ":rust_lib",
    ],
)

cc_binary(
    name = "example",
    srcs = ["examples/example.cpp"],
    deps = [":iggy-cpp"],
)
